added final tests, removed unnecessary file

--- a/src/latex/class_fourier_transform.tex
+++ b/src/latex/class_fourier_transform.tex
@@ -112,7 +112,7 @@ Function for output result on the screen
 \mbox{\Hypertarget{class_fourier_transform_af55008c0c7700bdb2b4e68d90d018b60}\label{class_fourier_transform_af55008c0c7700bdb2b4e68d90d018b60}} 
 \index{FourierTransform@{FourierTransform}!SaveFile@{SaveFile}}
 \index{SaveFile@{SaveFile}!FourierTransform@{FourierTransform}}
-\doxysubsubsection{\texorpdfstring{SaveFile()}{SaveFile()}}
+\doxysubsubsection{\texorpdfstring{SaveFile()}{SaveTimeSignal()}}
 {\footnotesize\ttfamily void Fourier\+Transform\+::\+Save\+File (\begin{DoxyParamCaption}\item[{string}]{filename,  }\item[{string}]{label }\end{DoxyParamCaption})}
 
 Function for save result in the separate file 
