--- a/src/latex/class_output.tex
+++ b/src/latex/class_output.tex
@@ -51,7 +51,7 @@ void \mbox{\hyperlink{class_output_a0203d8f9faf9b6e77afc07aeb877a39f}{Save\+File
 \mbox{\Hypertarget{class_output_a0203d8f9faf9b6e77afc07aeb877a39f}\label{class_output_a0203d8f9faf9b6e77afc07aeb877a39f}} 
 \index{Output@{Output}!SaveFile@{SaveFile}}
 \index{SaveFile@{SaveFile}!Output@{Output}}
-\doxysubsubsection{\texorpdfstring{SaveFile()}{SaveFile()}}
+\doxysubsubsection{\texorpdfstring{SaveFile()}{SaveTimeSignal()}}
 {\footnotesize\ttfamily void Output\+::\+Save\+File (\begin{DoxyParamCaption}\item[{std\+::vector$<$ float $>$}]{freq,  }\item[{std\+::vector$<$ float $>$}]{intensity,  }\item[{std\+::string}]{filename }\end{DoxyParamCaption}) const}
 
 
