--- a/src/latex/class_base_signal_processor.tex
+++ b/src/latex/class_base_signal_processor.tex
@@ -105,7 +105,7 @@ Destructor, clean field m\+Signal and m\+Noise\+Removed\+Signal
 \mbox{\Hypertarget{class_base_signal_processor_abf84a6df0eb340f6e4bd6cc0fd378af5}\label{class_base_signal_processor_abf84a6df0eb340f6e4bd6cc0fd378af5}} 
 \index{BaseSignalProcessor@{BaseSignalProcessor}!SaveFile@{SaveFile}}
 \index{SaveFile@{SaveFile}!BaseSignalProcessor@{BaseSignalProcessor}}
-\doxysubsubsection{\texorpdfstring{SaveFile()}{SaveFile()}}
+\doxysubsubsection{\texorpdfstring{SaveFile()}{SaveTimeSignal()}}
 {\footnotesize\ttfamily void Base\+Signal\+Processor\+::\+Save\+File (\begin{DoxyParamCaption}\item[{const string \&}]{filename }\end{DoxyParamCaption})}
 
 Method for saving a given file. 
