add name of the figures into the plots

--- a/plots.ipynb
+++ b/plots.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fourier Plotting"
+    "### Fourier Plotting for the noise equal to the 10 percents"
    ]
   },
   {
@@ -318,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
