change UML diagram

--- a/latex/_base_signal_processor_8cpp.tex
+++ b/latex/_base_signal_processor_8cpp.tex
@@ -3,8 +3,7 @@
 {\ttfamily \#include \char`\"{}Base\+Signal\+Processor.\+hpp\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}fstream\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}vector\char`\"{}}\newline
-Include dependency graph for Base\+Signal\+Processor.\+cpp\+:
-\nopagebreak
+Include dependency graph for Base\+Signal\+Processor.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
