--- a/latex/_fourier_transform_8cpp.tex
+++ b/latex/_fourier_transform_8cpp.tex
@@ -2,8 +2,7 @@
 \label{_fourier_transform_8cpp}\index{src/FourierTransform.cpp@{src/FourierTransform.cpp}}
 {\ttfamily \#include $<$fstream$>$}\newline
 {\ttfamily \#include \char`\"{}Fourier\+Transform.\+hpp\char`\"{}}\newline
-Include dependency graph for Fourier\+Transform.\+cpp\+:
-\nopagebreak
+Include dependency graph for Fourier\+Transform.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
