--- a/latex/_time_signal_processor_8cpp.tex
+++ b/latex/_time_signal_processor_8cpp.tex
@@ -2,8 +2,7 @@
 \label{_time_signal_processor_8cpp}\index{src/TimeSignalProcessor.cpp@{src/TimeSignalProcessor.cpp}}
 {\ttfamily \#include $<$numeric$>$}\newline
 {\ttfamily \#include \char`\"{}Time\+Signal\+Processor.\+hpp\char`\"{}}\newline
-Include dependency graph for Time\+Signal\+Processor.\+cpp\+:
-\nopagebreak
+Include dependency graph for Time\+Signal\+Processor.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
