--- a/latex/class_time_signal_processor.tex
+++ b/latex/class_time_signal_processor.tex
@@ -6,8 +6,7 @@
 
 
 
-Inheritance diagram for Time\+Signal\+Processor\+:
-\nopagebreak
+Inheritance diagram for Time\+Signal\+Processor\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -16,8 +15,7 @@ Inheritance diagram for Time\+Signal\+Processor\+:
 \end{figure}
 
 
-Collaboration diagram for Time\+Signal\+Processor\+:
-\nopagebreak
+Collaboration diagram for Time\+Signal\+Processor\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
