--- a/latex/tests_8cpp.tex
+++ b/latex/tests_8cpp.tex
@@ -4,8 +4,7 @@
 {\ttfamily \#include \char`\"{}gtest/gtest.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}../src/\+Fourier\+Transform.\+hpp\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}../src/\+Time\+Signal\+Processor.\+hpp\char`\"{}}\newline
-Include dependency graph for tests.\+cpp\+:
-\nopagebreak
+Include dependency graph for tests.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
