--- a/latex/_fourier_transform_8hpp.tex
+++ b/latex/_fourier_transform_8hpp.tex
@@ -7,16 +7,14 @@
 {\ttfamily \#include $<$numeric$>$}\newline
 {\ttfamily \#include $<$algorithm$>$}\newline
 {\ttfamily \#include $<$iostream$>$}\newline
-Include dependency graph for Fourier\+Transform.\+hpp\+:
-\nopagebreak
+Include dependency graph for Fourier\+Transform.\+hpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{_fourier_transform_8hpp__incl}
 \end{center}
 \end{figure}
-This graph shows which files directly or indirectly include this file\+:
-\nopagebreak
+This graph shows which files directly or indirectly include this file\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
