--- a/latex/_time_signal_processor_8hpp.tex
+++ b/latex/_time_signal_processor_8hpp.tex
@@ -5,16 +5,14 @@
 {\ttfamily \#include $<$algorithm$>$}\newline
 {\ttfamily \#include \char`\"{}Base\+Signal\+Processor.\+hpp\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}../\+Audio\+File/\+Audio\+File.\+h\char`\"{}}\newline
-Include dependency graph for Time\+Signal\+Processor.\+hpp\+:
-\nopagebreak
+Include dependency graph for Time\+Signal\+Processor.\+hpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{_time_signal_processor_8hpp__incl}
 \end{center}
 \end{figure}
-This graph shows which files directly or indirectly include this file\+:
-\nopagebreak
+This graph shows which files directly or indirectly include this file\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
