--- a/latex/class_base_signal_processor.tex
+++ b/latex/class_base_signal_processor.tex
@@ -6,8 +6,7 @@
 
 
 
-Inheritance diagram for Base\+Signal\+Processor\+:
-\nopagebreak
+Inheritance diagram for Base\+Signal\+Processor\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -16,8 +15,7 @@ Inheritance diagram for Base\+Signal\+Processor\+:
 \end{figure}
 
 
-Collaboration diagram for Base\+Signal\+Processor\+:
-\nopagebreak
+Collaboration diagram for Base\+Signal\+Processor\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -121,7 +119,7 @@ Method for saving the histogram bins to an output file
 
 
 \begin{DoxyParams}{Parameters}
-{\em file\+\_\+name} & \\
+{\em file\+\_\+name} & target directory for saving the histogram. \\
 \hline
 \end{DoxyParams}
 \mbox{\Hypertarget{class_base_signal_processor_ae5c1cccf8e49cffb276f744eb165aa71}\label{class_base_signal_processor_ae5c1cccf8e49cffb276f744eb165aa71}} 
@@ -132,7 +130,7 @@ Method for saving the histogram bins to an output file
 
 Method for saving a given file. 
 \begin{DoxyParams}{Parameters}
-{\em filename} & \\
+{\em filename} & target directory for saving the time signal. \\
 \hline
 \end{DoxyParams}
 \mbox{\Hypertarget{class_base_signal_processor_a38b0f45ffefd8b2dd301a249859f2292}\label{class_base_signal_processor_a38b0f45ffefd8b2dd301a249859f2292}} 
@@ -143,7 +141,7 @@ Method for saving a given file.
 
 Overloaded function for setting the time signal (in this case from an Audio\+File$<$double$>$ variable). 
 \begin{DoxyParams}{Parameters}
-{\em signal} & input signal \\
+{\em signal} & input signal as an Audio\+File object \\
 \hline
 \end{DoxyParams}
 \mbox{\Hypertarget{class_base_signal_processor_a1c0ba0c415866ed838892a79ed794610}\label{class_base_signal_processor_a1c0ba0c415866ed838892a79ed794610}} 
@@ -154,7 +152,7 @@ Overloaded function for setting the time signal (in this case from an Audio\+Fil
 
 Overloaded function for setting the time signal (in this case from a vector$<$double$>$ variable). 
 \begin{DoxyParams}{Parameters}
-{\em signal} & input signal \\
+{\em signal} & input signal as a vector$<$double$>$ \\
 \hline
 \end{DoxyParams}
 
