--- a/latex/md__r_e_a_d_m_e.tex
+++ b/latex/md__r_e_a_d_m_e.tex
@@ -1,10 +1,10 @@
 Project for the MATH-\/458 course.\hypertarget{md__r_e_a_d_m_e_autotoc_md1}{}\doxysection{Requirements}\label{md__r_e_a_d_m_e_autotoc_md1}
 It is necessary to have {\ttfamily cmake} to compile the code via the {\ttfamily CMake\+Lists.\+txt} file. {\ttfamily jupyter-\/notebook} is also necessary to visualize the plots of the outputted data from the codebase, as well as the libraries {\ttfamily matplotlib}, {\ttfamily pandas}, and {\ttfamily numpy} for generating the plots.\hypertarget{md__r_e_a_d_m_e_autotoc_md2}{}\doxysection{User Guide}\label{md__r_e_a_d_m_e_autotoc_md2}
-In order to set up the project, it is necessary to run the following commands\+:
+In order to set up the project, first clone the repository and then run the following commands\+:
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{git clone *insert\_repository\_url*}
+\DoxyCodeLine{cd signal-\/processing}
 \DoxyCodeLine{git submodule add https://github.com/adamstark/AudioFile.git}
 \DoxyCodeLine{git submodule add https://github.com/google/googletest.git}
 \DoxyCodeLine{git submodule init}
@@ -20,23 +20,35 @@ The from the build directory run the file as follows\+:
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{./test\_signal\_processor}
-\DoxyCodeLine{./run\_signal\_processor window\_average average\_mode num\_fourier\_coeffs}
+\DoxyCodeLine{./run\_signal\_processor}
 
 \end{DoxyCode}
 
 
-Note that {\ttfamily window\+\_\+average} is an integer representing the moving average window that will be used for the time domain averaging, {\ttfamily average\+\_\+mode} is a string which determines the type of averaging that will be applied (the two options are \char`\"{}moving\+\_\+average\char`\"{} and \char`\"{}exponential\+\_\+moving\+\_\+average\char`\"{}), and {\ttfamily num\+\_\+fourier\+\_\+coeffs} represents the number of Fourier coefficients that will be used for the filtering in the Fourier domain (i.\+e. we consider the ones with the largest magnitude for reconstructing the signal in the time domain).
+You will be prompted to input a number of parameters. Note that {\ttfamily window\+\_\+average} is an integer representing the moving average window that will be used for the time domain averaging, {\ttfamily average\+\_\+mode} is a string which determines the type of averaging that will be applied (the two options are \char`\"{}moving\+\_\+average\char`\"{} and \char`\"{}exponential\+\_\+moving\+\_\+average\char`\"{}), and {\ttfamily num\+\_\+fourier\+\_\+coeffs} represents the number of Fourier coefficients that will be used for the filtering in the Fourier domain (i.\+e. we consider the ones with the largest magnitude for reconstructing the signal in the time domain).
 
 Once you have run this, you can run open the jupyter notebook {\ttfamily plots.\+ipynb} to visualize the results (note that there are already plots present which we have generated from our own test runs).\hypertarget{md__r_e_a_d_m_e_autotoc_md3}{}\doxysection{Repository Structure}\label{md__r_e_a_d_m_e_autotoc_md3}
-The repository is structured as follows\+:\hypertarget{md__r_e_a_d_m_e_autotoc_md4}{}\doxysubsection{Base\+Signal\+Processor.\+hpp/cpp}\label{md__r_e_a_d_m_e_autotoc_md4}
-Base class from which the \mbox{\hyperlink{class_fourier_transform}{Fourier\+Transform}} and \mbox{\hyperlink{class_time_signal_processor}{Time\+Signal\+Processor}} classes are derived. Contains custom constructor that sets the time signal to a member variable, as well as saving functionality which are used in both derived classes.\hypertarget{md__r_e_a_d_m_e_autotoc_md5}{}\doxysubsection{Fourier\+Transform.\+hpp/cpp}\label{md__r_e_a_d_m_e_autotoc_md5}
-Header and source file containing the \mbox{\hyperlink{class_fourier_transform}{Fourier\+Transform}} class. It contains methods to perform the Fast Fourier Transform, which are subdivided into further smaller functions, the inverse Fourier Transform, and perform filtering in the Fourier domain.\hypertarget{md__r_e_a_d_m_e_autotoc_md6}{}\doxysubsection{Signal\+Processor.\+hpp/cpp}\label{md__r_e_a_d_m_e_autotoc_md6}
-Header and source file containing the signal processor class which works with time domain signals. It contains methods to perform noise removal (either via the moving average or exponential moving average), and generate intensity histograms.\hypertarget{md__r_e_a_d_m_e_autotoc_md7}{}\doxysubsection{tests.\+cpp}\label{md__r_e_a_d_m_e_autotoc_md7}
+The repository is structured as follows\+:
+
+{\ttfamily \mbox{\hyperlink{_base_signal_processor_8hpp}{Base\+Signal\+Processor.\+hpp}}/cpp}
+
+Base class from which the \mbox{\hyperlink{class_fourier_transform}{Fourier\+Transform}} and \mbox{\hyperlink{class_time_signal_processor}{Time\+Signal\+Processor}} classes are derived. Contains custom constructor that sets the time signal to a member variable, as well as saving functionality which are used in both derived classes.
+
+{\ttfamily \mbox{\hyperlink{_fourier_transform_8hpp}{Fourier\+Transform.\+hpp}}/cpp}
+
+Header and source file containing the \mbox{\hyperlink{class_fourier_transform}{Fourier\+Transform}} class. It contains methods to perform the Fast Fourier Transform, which are subdivided into further smaller functions, the inverse Fourier Transform, and perform filtering in the Fourier domain.
+
+{\ttfamily \mbox{\hyperlink{_time_signal_processor_8hpp}{Time\+Signal\+Processor.\+hpp}}/cpp}
+
+Header and source file containing the signal processor class which works with time domain signals. It contains methods to perform noise removal (either via the moving average or exponential moving average), and generate intensity histograms.\hypertarget{md__r_e_a_d_m_e_autotoc_md4}{}\doxysubsection{tests.\+cpp}\label{md__r_e_a_d_m_e_autotoc_md4}
 All the tests performed on the above classes containing into the tests/test.\+cpp\+:
 
 
 \begin{DoxyItemize}
-\item Tests for \mbox{\hyperlink{class_fourier_transform}{Fourier\+Transform}} class -\/ {\ttfamily fft\+\_\+1}, {\ttfamily fft\+\_\+2}, {\ttfamily inverse\+\_\+fft\+\_\+1}, {\ttfamily inverse\+\_\+fft\+\_\+2} and {\ttfamily fft\+\_\+filter};
+\item Tests for \mbox{\hyperlink{class_fourier_transform}{Fourier\+Transform}} class -\/ {\ttfamily fft\+\_\+1}, {\ttfamily fft\+\_\+2}, {\ttfamily inverse\+\_\+fft\+\_\+1}, {\ttfamily inverse\+\_\+fft\+\_\+2} and {\ttfamily fft\+\_\+filter}
 \item Tests for \mbox{\hyperlink{class_time_signal_processor}{Time\+Signal\+Processor}} class -\/ {\ttfamily remove\+\_\+noise} and {\ttfamily histogram\+\_\+testing}.
-\end{DoxyItemize}\hypertarget{md__r_e_a_d_m_e_autotoc_md8}{}\doxysection{Limitations \& Future Improvements}\label{md__r_e_a_d_m_e_autotoc_md8}
-Currently the code is not set up to deal with signals whose length is not a power of 2 (due to the specific implementation of the FFT). Furthermore it is only set up to work with mono channel signals. 
+\end{DoxyItemize}\hypertarget{md__r_e_a_d_m_e_autotoc_md5}{}\doxysection{Limitations \& Future Improvements}\label{md__r_e_a_d_m_e_autotoc_md5}
+Currently the code is not set up to deal with signals whose length is not a power of 2 (due to the specific implementation of the FFT). Furthermore it is only set up to work with mono channel signals.\hypertarget{md__r_e_a_d_m_e_autotoc_md6}{}\doxysection{External Libraries}\label{md__r_e_a_d_m_e_autotoc_md6}
+Audio\+File \href{https://github.com/adamstark/AudioFile.git}{\texttt{ \mbox{[}1\mbox{]}}} -\/ used for loading in wav files.
+
+Google\+Test \href{https://github.com/google/googletest.git}{\texttt{ \mbox{[}2\mbox{]}}} -\/ testing suite. 
