fix label for output

--- a/latex/class_fourier_transform.tex
+++ b/latex/class_fourier_transform.tex
@@ -6,8 +6,7 @@
 
 
 
-Collaboration diagram for Fourier\+Transform\+:
-\nopagebreak
+Collaboration diagram for Fourier\+Transform\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -233,7 +232,7 @@ Function for save result in the separate file
 \begin{DoxyParams}{Parameters}
 {\em filename} & path to the file \\
 \hline
-{\em output\+\_\+param} & the parameter, that you want to print\+: clean frequency, frequency, signal, clean signal \\
+{\em output\+\_\+param} & the parameter, that you want to print\+: Clean\+Frequency, Frequency, Signal, Clean\+Signal \\
 \hline
 \end{DoxyParams}
 
