--- a/latex/class_time_signal_processor.tex
+++ b/latex/class_time_signal_processor.tex
@@ -37,7 +37,7 @@ void \mbox{\hyperlink{class_time_signal_processor_a619d7fe0b1bc8158a0426d7559929
 
 
 \doxysubsection{Detailed Description}
-Class for signal preprocessing (noise removing and histogram building). 
+Class for signal preprocessing (noise removing and histogram building). Derived from the \mbox{\hyperlink{class_base_signal_processor}{Base\+Signal\+Processor}} class. 
 \begin{DoxyParams}{Parameters}
 {\em m\+Signal} & original signal \\
 \hline
