upload last version of docs

--- a/latex/md__r_e_a_d_m_e.tex
+++ b/latex/md__r_e_a_d_m_e.tex
@@ -42,7 +42,11 @@ Header and source file containing the \mbox{\hyperlink{class_fourier_transform}{
 
 {\ttfamily \mbox{\hyperlink{_time_signal_processor_8hpp}{Time\+Signal\+Processor.\+hpp}}/cpp}
 
-Header and source file containing the derived signal processor class which works with time domain signals. It contains methods to perform noise removal (either via the moving average or exponential moving average), and generate intensity histograms (the latter of which comes from the \mbox{\hyperlink{class_base_signal_processor}{Base\+Signal\+Processor}} class).\hypertarget{md__r_e_a_d_m_e_autotoc_md4}{}\doxysubsection{tests.\+cpp}\label{md__r_e_a_d_m_e_autotoc_md4}
+Header and source file containing the derived signal processor class which works with time domain signals. It contains methods to perform noise removal (either via the moving average or exponential moving average), and generate intensity histograms (the latter of which comes from the \mbox{\hyperlink{class_base_signal_processor}{Base\+Signal\+Processor}} class).
+
+{\ttfamily run\+\_\+file.\+cpp}
+
+Contains the implementation of the methods implemented in this class, as described above in the user guide.\hypertarget{md__r_e_a_d_m_e_autotoc_md4}{}\doxysubsection{tests.\+cpp}\label{md__r_e_a_d_m_e_autotoc_md4}
 All the tests performed on the above classes containing into the tests/test.\+cpp\+:
 
 
